# giskard_tutorials

./: .gitignore  CMakeLists.txt  README.md  package.xml
rosinstall/: catkin.rosinstall
scripts/action_interface/: cartesian_space_action_client.py  joint_space_action_client.py
scripts/python_interface/: allow_self_collision.py  attached_collision.py  cart.py  joint.py  joint_and_cart.py
src/: cartesian_space_action_client.cpp  joint_space_action_client.cpp  touching_a_square.cpp
src/examples/: cartesian_space_action_client.cpp  joint_and_cartesian_space_commands.cpp  joint_space_action_client.cpp
